--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -53,6 +54,7 @@
             android:layout_marginTop="50dp"/>
 
 <Button
+    android:id="@+id/login_user"
     android:layout_width="100dp"
     android:layout_height="50dp"
     android:layout_gravity="center"
