--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,9 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/img"
-        android:layout_width="200dp"
+        android:layout_width="400dp"
         android:layout_height="200dp"
-        android:src="@drawable/unasat_logo"
+        android:src="@drawable/unasat"
         android:layout_gravity="center"/>
 
 </LinearLayout>
