--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -9,6 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_orders_fragment" />
+        android:text="@string/hello_orders_fragment"
+        android:textSize="40dp"/>
 
 </FrameLayout>
