--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -32,11 +32,11 @@
             android:fontFamily="sans-serif-medium"
             />
         <EditText
-            android:id="@+id/user_naam"
+            android:id="@+id/user_name"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
-            android:hint="naam..."
+            android:hint="Naam..."
             android:layout_gravity="center"
             android:drawableLeft="@drawable/ic_person_outline_black_24dp"
             android:drawablePadding="10dp"
@@ -46,18 +46,18 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
-            android:hint="username..."
+            android:hint="Gebruikersnaam..."
             android:layout_gravity="center"
             android:drawableLeft="@drawable/ic_email_black_24dp"
             android:drawablePadding="10dp"
             android:layout_marginTop="20dp"/>
 
         <EditText
-            android:id="@+id/user_stud_numer"
+            android:id="@+id/user_stud_nummer"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:inputType="text"
-            android:hint="studentennummer..."
+            android:hint="Studentennummer..."
             android:layout_gravity="center"
             android:drawableLeft="@drawable/ic_credit_card_black_24dp"
             android:drawablePadding="10dp"
@@ -67,7 +67,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:hint="password..."
+            android:hint="Wachtwoord..."
             android:layout_gravity="center"
             android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
             android:drawablePadding="10dp"
@@ -78,9 +78,10 @@
             android:layout_width="110dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="70dp"
             android:text="Registreer"
             />
+
 
     </LinearLayout>
 
