Added DataFetcher class to pull data from placeholder API

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,11 +6,17 @@
     tools:context=".HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="0dp"
-        android:src="@drawable/book"/>
+  <ScrollView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+      <TextView
+          android:id="@+id/fetched_data"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:padding="5dp"
+          android:textSize="22dp"
+          />
+
+  </ScrollView>
 
 </FrameLayout>
