--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,9 +12,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_margin="30dp"
-        android:orientation="vertical"
+        android:orientation="vertical">
 
-        >
         <ImageView
             android:layout_width="300dp"
             android:layout_height="200dp"
@@ -74,8 +73,8 @@
             />
         <Button
             android:id="@+id/register"
-            android:layout_width="110dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="0dp"
             android:text="Registreer"
