--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,78 +9,79 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="30dp"
-        android:orientation="vertical"
+        android:orientation="vertical">
 
-        >
         <ImageView
             android:layout_width="300dp"
             android:layout_height="200dp"
-            android:src="@drawable/unasat"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:src="@drawable/unasat" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Registreer"
-            android:textColor="#696969"
-            android:textStyle="bold"
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
-            android:textSize="24dp"
             android:fontFamily="sans-serif-medium"
-            />
+            android:text="Registreer gebruiker"
+            android:textColor="#696969"
+            android:textSize="24dp"
+            android:textStyle="bold" />
+
         <EditText
             android:id="@+id/user_name"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:hint="Naam..."
             android:layout_gravity="center"
+            android:layout_marginTop="50dp"
             android:drawableLeft="@drawable/ic_person_outline_black_24dp"
             android:drawablePadding="10dp"
-            android:layout_marginTop="50dp"/>
+            android:hint="Gebruikernaam"
+            android:inputType="textPersonName" />
+
         <EditText
             android:id="@+id/user_email"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:hint="Gebruikersnaam..."
             android:layout_gravity="center"
+            android:layout_marginTop="20dp"
             android:drawableLeft="@drawable/ic_email_black_24dp"
             android:drawablePadding="10dp"
-            android:layout_marginTop="20dp"/>
+            android:hint="Email"
+            android:inputType="textEmailAddress" />
+
+        <EditText
+            android:id="@+id/user_password"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
+            android:drawablePadding="10dp"
+            android:hint="Wachtwoord"
+            android:inputType="textPassword" />
 
         <EditText
             android:id="@+id/user_stud_nummer"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="Studentennummer..."
             android:layout_gravity="center"
+            android:layout_marginTop="20dp"
             android:drawableLeft="@drawable/ic_credit_card_black_24dp"
             android:drawablePadding="10dp"
-            android:layout_marginTop="20dp"/>
-        <EditText
-            android:id="@+id/user_password"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="Wachtwoord..."
-            android:layout_gravity="center"
-            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
-            android:drawablePadding="10dp"
-            android:layout_marginTop="20dp"/>
+            android:hint="Studentnummer"
+            android:inputType="text" />
 
         <Button
             android:id="@+id/register_user"
-            android:layout_width="110dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="70dp"
-            android:text="Registreer"
-            />
+            android:text="Registreer" />
 
 
     </LinearLayout>
