display order af

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,7 +36,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
-            android:hint="Gebruikersnaam..."
+            android:hint="Gebruikersnaam"
             android:layout_gravity="center"
             android:drawableLeft="@drawable/ic_person_outline_black_24dp"
             android:drawablePadding="10dp"
@@ -46,7 +46,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:hint="Wachtwoord..."
+            android:hint="Wachtwoord"
             android:layout_gravity="center"
             android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
             android:drawablePadding="10dp"
