--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,7 +39,7 @@
             android:layout_marginTop="50dp"
             android:drawableLeft="@drawable/ic_person_outline_black_24dp"
             android:drawablePadding="10dp"
-            android:hint="Gebruikernaam"
+            android:hint="Naam"
             android:inputType="textPersonName" />
 
         <EditText
