--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -11,7 +11,7 @@
         android:id="@+id/bookCover"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/book" />
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -38,7 +38,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginRight="10dp"
-            android:src="@android:drawable/ic_menu_edit" />
+            android:src="@drawable/ic_arrow_downward_black_24dp" />
     </LinearLayout>
 
 
