--- a/app/src/main/res/layout/dialog_insert_order.xml
+++ b/app/src/main/res/layout/dialog_insert_order.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="Author"
+            android:text="Auteur"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:hint="Totaal"
+            android:hint="Aantal"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -41,7 +41,7 @@
             android:id="@+id/btnInsertOrder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Order"
+            android:text="Bestel"
             android:textStyle="bold"
             android:textSize="20sp" />
     </LinearLayout>
