--- a/app/src/main/res/layout/dialog_update_order.xml
+++ b/app/src/main/res/layout/dialog_update_order.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:hint="Totaal"
+            android:hint="Aantal"
             android:textSize="20sp"
             android:textStyle="bold" />
 
