--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:layout_margin="30dp"
     android:layout_marginBottom="5dp"
     android:orientation="horizontal">
 
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Titel"
-            android:textSize="30sp" />
+            android:textSize="12dp" />
 
         <TextView
             android:id="@+id/orderBookAuthor"
@@ -36,7 +36,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:gravity="center_vertical"
-        android:text="Amount"
+        android:text="Aantal"
         android:textSize="15sp" />
 
     <ImageButton
@@ -44,7 +44,7 @@
         android:layout_width="50dp"
         android:layout_height="match_parent"
         android:layout_marginRight="10dp"
-        android:src="@android:drawable/ic_menu_edit" />
+        android:src="@drawable/ic_edit_black_24dp" />
 
     <ImageButton
         android:id="@+id/removeItem"
