--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -81,8 +81,9 @@
             android:id="@+id/logOut"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="400dp"
             android:text="Uitloggen"
+            android:backgroundTint="@color/design_default_color_error"
             android:textColor="@android:color/white" />
 
     </LinearLayout>
