--- a/app/src/main/res/layout/dialog_insert_order.xml
+++ b/app/src/main/res/layout/dialog_insert_order.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center">
 
@@ -10,13 +10,18 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/insertBookCover"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <TextView
             android:id="@+id/insertBookTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:text="Titel"
-            android:textSize="20sp"
+            android:textSize="10sp"
             android:textStyle="bold" />
 
         <TextView
@@ -25,7 +30,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:text="Auteur"
-            android:textSize="20sp"
+            android:textSize="10sp"
             android:textStyle="bold" />
 
         <EditText
@@ -34,7 +39,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:hint="Aantal"
-            android:textSize="20sp"
+            android:textSize="10sp"
             android:textStyle="bold" />
 
         <Button
@@ -42,8 +47,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Bestel"
-            android:textStyle="bold"
-            android:textSize="20sp" />
+            android:textSize="10sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
 </RelativeLayout>
