--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="30dp"
-    android:layout_marginBottom="5dp"
+    android:layout_margin="15dp"
+    android:padding="5dp"
+    android:background="@drawable/border"
     android:orientation="horizontal">
 
 
@@ -17,7 +18,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="Titel"
-            android:textSize="12dp" />
+            android:textSize="15dp" />
 
         <TextView
             android:id="@+id/orderBookAuthor"
@@ -25,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:text="Auteur"
-            android:textSize="15sp" />
+            android:textSize="10sp" />
 
     </LinearLayout>
 
@@ -37,7 +38,7 @@
         android:layout_marginEnd="50dp"
         android:gravity="center_vertical"
         android:text="Aantal"
-        android:textSize="15sp" />
+        android:textSize="10sp" />
 
     <ImageButton
         android:id="@+id/editItem"
